a11y: fix issue galley links on small screens

--- a/src/css/components/homepage-blocks/issue-summary.css
+++ b/src/css/components/homepage-blocks/issue-summary.css
@@ -1,3 +1,21 @@
+.homepage-issue-summary {
+
+  & .issue-summary-link:after {
+    content: ' ';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 99999;
+  }
+
+  & .issue-summary-galleys {
+    position: relative;
+    z-index: 999999;
+  }
+}
+
 @media (--tablets) {
   .homepage-issue-summary {
 
@@ -5,21 +23,6 @@
       flex-direction: row-reverse;
       margin-left: auto;
       margin-right: auto;
-    }
-
-    & .issue-summary-link:after {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      z-index: 99999;
-    }
-
-    & .issue-summary-galleys {
-      position: relative;
-      z-index: 999999;
     }
   }
 }
